--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,13 @@
        "dict_keys(['Dataset Title', 'GPT Input', 'Datamart Profiler Result', 'DataFrame', 'DataFrame Sample'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_sample = pickle.load(open(\"dataset_sample\", \"rb\"))\n",
+    "dataset_sample = pickle.load(open(\"../dataset_sample\", \"rb\"))\n",
     "dataset_sample.keys()"
    ]
   },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "  'Direction']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
